--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -1,1 +1,8 @@
-%name {}
+%text_link {
+    font-family: 'Inter Regular';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.01em;
+    color: #444444;
+}
