--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -1,7 +1,6 @@
 header{
-    padding: 30px 0;
     position: relative;
-    border-bottom: 1px solid #727272;
+    background: #F4F4F4;
 }
 nav{
     position: relative;
@@ -9,57 +8,43 @@ nav{
 .hamburger{
     display: none;
 }
+
 .menu{
+    margin-top: 24px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    &__link{
-        color: $main-color;
+    &__logo{
+        &:hover{
+            .logo-main{
+                fill: $main-color;
+            }
+        }
     }
     &__list{
+        margin-top: 18px;
         display: flex;
-        margin-left: auto;
-        align-items: center;
         gap: 60px;
         list-style: none;
-        margin-right: 60px;
-
     }
     &__link{
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 23px;
-        color: $main-color;
-        transition: all .2s;
+        @extend %text_link;
+        transition: all .1s;
         &:hover{
-            font-weight: 700;
             color: $main-color;
             text-decoration: none;
         }
     }
-    &__button{
-        position: relative;
-        padding: 20px 20px 20px 70px;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 21px;
-        border: 2px solid $blue-color;
-        border-radius: 10px;
+    &__call{
+        margin-top: 18px;
+        @extend %text_link;
+        font-weight: 700;
+        transition: all .1s;
         &:hover{
-            color: $blue-color;
             text-decoration: none;
-        }
-        &::after{
-            content: '';
-            position: absolute;
-            background-image: url('../icons/header/phone.svg');
-            width: 35px;
-            height: 35px;
-            top: 15px;
-            left: 25px;
+            color: $main-color;
         }
     }
+}
+.logo-main{
+    transition: all .1s;
 }
