creat section advantages about-us laboratory feedback footer

--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -6,3 +6,11 @@
     letter-spacing: 0.01em;
     color: #444444;
 }
+%text_title{
+    font-family: 'Source Sans Pro SemiBold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 64px;
+    line-height: 100%;
+    color: #000000;
+}
