--- a/src/sass/block/_promo.scss
+++ b/src/sass/block/_promo.scss
@@ -1,7 +1,7 @@
 .promo{
     position: relative;
     width: 100%;
-    background: #F4F4F4;
+    background: $backgr-color;
     padding-top: 159px;
     padding-bottom: 301px;
     overflow: hidden;
