--- a/src/sass/block/_promo.scss
+++ b/src/sass/block/_promo.scss
@@ -10,7 +10,7 @@
         &::before{
             position: absolute;
             content: '';
-            background: url('../../img/promo/decor.png') center center / cover no-repeat;
+            background: url('../img/promo/decor.png') center center / cover no-repeat;
             top: -137px;
             left: 643px;
             width: 861px;
