--- a/src/sass/libs/stylesheet.scss
+++ b/src/sass/libs/stylesheet.scss
@@ -1,26 +1,26 @@
 @font-face {
   font-family: 'Nokora Regular';
-  src: url('../../fonts/Nokora-Regular.ttf')  format('truetype');
+  src: url('../fonts/Nokora-Regular.ttf')  format('truetype');
   font-style: normal;
   }
 @font-face {
   font-family: 'Nokora Bold';
-  src: url('../../fonts/Nokora-Bold.ttf')  format('truetype');
+  src: url('../fonts/Nokora-Bold.ttf')  format('truetype');
   font-style: normal;
   }
 @font-face {
   font-family: 'Source Sans Pro SemiBold';
-  src: url('../../fonts/SourceSansPro-SemiBold.ttf')  format('truetype');
+  src: url('../fonts/SourceSansPro-SemiBold.ttf')  format('truetype');
   font-style: normal;
   }
 @font-face {
   font-family: 'Inter Regular';
-  src: url('../../fonts/Inter-Regular.ttf')  format('truetype');
+  src: url('../fonts/Inter-Regular.ttf')  format('truetype');
   font-style: normal;
   }
 @font-face {
   font-family: 'Inter Semi Bold';
-  src: url('../../fonts/Inter-SemiBold.ttf')  format('truetype');
+  src: url('../fonts/Inter-SemiBold.ttf')  format('truetype');
   font-style: normal;
   }
 
