--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -13,4 +13,7 @@
     font-size: 64px;
     line-height: 100%;
     color: #000000;
+    @media (max-width:576px){
+        font-size: 40px;
+    }
 }
