--- a/src/sass/block/_promo.scss
+++ b/src/sass/block/_promo.scss
@@ -5,6 +5,7 @@
     padding-top: 159px;
     padding-bottom: 301px;
     overflow: hidden;
+    border-radius: 0 0 35px 35px;
     &__wrapper{
         position: relative;
         &::before{
