--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -2,15 +2,103 @@
     .container{
         max-width: 960px;
     }
+    .advantages{
+        &__list{
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            row-gap: 32px;
+            justify-items: center;
+        }
+    }
+    .about-us{
+        &__wrapper{
+            &::before{
+                display: none;
+            }
+            &::after{
+                display: none;
+            }
+        }
+        &__title{
+            margin-left: 0;
+            text-align: center;
+        }
+        &__deskr{
+            display: block;
+            width: 90%;
+            margin: 0 auto;
+            margin-top: 24px;
+        }
+    }
+    .laboratory{
+        &__list{
+            grid-template: repeat(3, 1fr) / repeat(2, 385px);
+            justify-content: center;
+        }
+        &__item{
+            width: 385px;
+        }
+    }
 }
 
 @media (max-width:992px){
     .container{
-        max-width: 720px;
+        max-width: 672px;
     }
     .menu{
+        justify-content: flex-start;
         &__list{
-            gap: 30px;
+            margin-left: 38px;
+            gap: 72px;
+        }
+        &__call{
+            display: none;
+        }
+    }
+    .promo{
+        padding-bottom: 32px;
+        &__wrapper{
+            &::before{
+                background: url('../img/promo/decor_media_769.png') center center / cover no-repeat;
+                top: -133px;
+                left: 513px;
+                width: 207px;
+                height: 489px;
+            }
+        }
+        &__social{
+            display: none;
+        }
+        &__title{
+            margin-top: 0;
+        }
+        &__feedback{
+            gap: 39px;
+        }
+    }
+    .advantages{
+        &__list{
+            padding: 0 56px;
+            row-gap: 32px;
+        }
+        &__item{
+            width: 265px;
+            padding-top: 56px;
+            padding-bottom: 34px;
+        }
+        &__img{
+            width: 88px;
+            img{
+                transform: scale(93%);
+            }
+        }
+        &__deskr{
+            margin-top: 33px;
+        }
+    }
+    .about-us{
+        &__deskr{
+            width: 667px;
         }
     }
 }
@@ -19,70 +107,186 @@
     .container{
         max-width: 540px;
     }
-   
+    .menu{
+        &__list{
+            margin-left: 20px;
+            gap: 35px;
+        }
+    }
+    .promo{
+        padding-top: 58px;
+        &__wrapper{
+            &::before{
+                display: none;
+            }
+        }
+        &__title{
+            font-size: 40px;
+            line-height: 100%;
+        }
+        &__deskr{
+            width: 100%;
+        }
+        &__feedback{
+            margin-top: 41px;
+            gap: 20px;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__btn{
+            width: 280px;
+        }
+        &__call{
+            width: 300px;
+        }
+    }
+    .advantages{
+        &__list{
+            padding: 0;
+            grid-template-columns: repeat(1, 1fr);
+        }
+        &__item{
+            width: 265px;
+            padding-top: 56px;
+            padding-bottom: 34px;
+        }
+        &__img{
+            width: 88px;
+            img{
+                transform: scale(93%);
+            }
+        }
+        &__deskr{
+            margin-top: 33px;
+        }
+    }
+    .about-us{
+        &__deskr{
+            width: 100%;
+        }
+    }
 }
 
 @media (max-width:576px){
     .container{
         width: 100%;
-        padding: 0 10px;
+        padding: 0 24px;
     }
     .menu{
+        margin-top: 27px;
         &__list{
+            z-index: 2;
             position: fixed;
-            top: 0;
+            top: -18px;
             left: -100%;
-            width: 50%;
+            width: 55%;
             height: 100vh;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
-            background-color: rgba(0,0,0, .8);
-            padding: 20px 15px;
-            transition: 0.6s all;
+            background-color: rgba(0,0,0,.7);
+            padding: 100px 10px;
+            transition: .6s all;
+            gap: 25px;
             &_active{
-                left: 0;
+                z-index: 2;
+                left: -24px;
             }
         }
-        &__item{
-            padding-right: 0;
-            border: none;
-            margin: 10px 0;
-        }
         &__link{
-            font-size: 20px;
+            color: white;
         }
     }
     .hamburger{
+        z-index: 10;
         display: block;
-        position: absolute;
-        right: 10px;
-        top: 50%;
+        align-items: center;
+        position: fixed;
+        right: 24px;
+        top: 24px;
         transform: translateY(-50%);
-        width: 26px;
-        height: 12px;
+        width: 46px;
+        height: 46px;
+        padding: 13px 9px;
         span{
             display: block;
-            height: 2px;
+            border: 1.5px solid #000000;
             width: 100%;
-            background-color:$main-color;
-            margin-bottom: 2px;
+            margin-bottom: 9px;
             transition: 0.5s all;
         }
         &_active{
             span{
                 margin-bottom: -2px;
                 &:nth-child(1){
-                    transform: translateY(3px) rotate(-45deg);
+                    transform: translateY(10px) rotate(-45deg);
+                    width: 120%;
                 }
                     
                 &:nth-child(2){
                     display: none;
                 }
                 &:nth-child(3){
-                    transform: translateY(3px) rotate(45deg);
+                    transform: translateY(10px) rotate(45deg);
+                    width: 120%;
                 }
             }
+        }
+    }
+    .promo{
+        padding-bottom: 10px;
+        &__title{
+            width: 100%;
+        }
+        &__deskr{
+            margin-top: 16px;
+        }
+        &__feedback{
+            margin-top: 41px;
+            gap: 8px;
+        }
+        &__btn{
+            width: 273px;
+            font-size: 23px;
+        }
+        &__call{
+            width: 275px;
+            font-size: 23px;
+        }
+    }
+    .advantages{
+        padding-top: 40px;
+        &__list{
+            padding: 0;
+            grid-template-columns: repeat(1, 1fr);
+        }
+        &__item{
+            width: 272px;
+            padding-top: 59px;
+            padding-bottom: 58px;
+        }
+        &__img{
+            width: 91px;
+            img{
+                transform: scale(97%);
+            }
+        }
+        &__deskr{
+            margin-top: 37px;
+        }
+    }
+    .about-us{
+        &__deskr{
+            font-size: 16px;
+            line-height: 21px;
+            span{
+                display: none;
+            }
+        }
+        &__btn{
+            font-size: 19px;
+            line-height: 22px;
+            padding: 22px 58px;
         }
     }
 }
