--- a/src/sass/block/_about-us.scss
+++ b/src/sass/block/_about-us.scss
@@ -37,6 +37,12 @@
         font-size: 24px;
         line-height: 32px;
         letter-spacing: 0.01em;
+        span{
+            font-family: 'Inter Regular';
+            font-size: 24px;
+            line-height: 32px;
+            letter-spacing: 0.01em;
+        }
     }
     &__btn{
         display: block;
