--- a/src/sass/block/_advantages.scss
+++ b/src/sass/block/_advantages.scss
@@ -2,8 +2,9 @@
     width: 100%;
     padding-top: 72px;
     &__list{
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 32px;
     }
     &__item{
         display: flex;
