--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -39,6 +39,18 @@
             width: 385px;
         }
     }
+    .feedback{
+        &__wrapper{
+            padding: 43px 48px;
+            &::before{
+                right: -70px;
+            }
+        }
+        &__title{
+            margin: 0;
+            text-align: center;
+        }
+    }
 }
 
 @media (max-width:992px){
@@ -100,6 +112,103 @@
         &__deskr{
             width: 667px;
         }
+    }
+    .laboratory{
+        margin-top: 120px;
+        &__list{
+            margin-top: 51px;
+            grid-template: repeat(3, 1fr) / repeat(2, 320px);
+            gap: 31px;
+        }
+        &__item{
+            width: 320px;
+            min-height: 320px;
+            padding-top: 13px;
+            padding-bottom: 27px;
+            &:nth-child(4){
+                padding-top: 16px;
+                .laboratory__item_title{
+                    margin-top: 16px;
+                }
+                .laboratory__item_img{
+                    width: 236px;
+                }
+            }
+            &:nth-child(5){
+                padding-top: 10px;
+                .laboratory__item_title{
+                    margin-top: 10px;
+                }
+                .laboratory__item_img{
+                    width: 217px;
+                }
+            }
+            &:nth-child(6){
+                padding-top: 25px;
+                .laboratory__item_title{
+                    margin-top: 20px;
+                }
+            }
+            &_img{
+                width: 260px;
+            }
+            &_title{
+                margin-top: 36px;
+                margin-left: 26px;
+                font-size: 20px;
+            }
+            &_deskr{
+                margin-top: 13px;
+                margin-left: 26px;
+                font-size: 13px;
+                line-height: 17px;
+            }
+        }
+    }
+    .feedback{
+        background-color: $backgr-color;
+        margin-top: 120px;
+        border-radius: 0 0 35px 35px;
+        overflow: hidden;
+        &__wrapper{
+            width: 100%;
+            padding: 43px 0;
+            overflow: visible;
+            z-index: 0;
+            &::before{
+                z-index: -1;
+                background: url('../../img/feedback/feedback_decor_media.png') center center / cover no-repeat;
+                bottom: 0px;
+                right: -52px;
+                width: 305px;
+                height: 482px;
+            }
+        }
+    }
+    .form{
+        z-index: 3;
+        margin-top: 24px;
+        &__top{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            column-gap: 32px;
+            row-gap: 27px;
+        }
+        &__input{
+            width: 320px;
+        }
+        #email{
+            grid-column: 1/3;
+            width: 100%;
+        }
+        &__btn{
+            z-index: 3;
+            margin-top: 48px;
+        }
+    }
+    .footer{
+        margin-top: 120px;
     }
 }
 
@@ -165,6 +274,31 @@
             width: 100%;
         }
     }
+    .laboratory{
+        &__list{
+            grid-template: repeat(3, 1fr) / repeat(1, 320px);
+        }
+    }
+    .feedback{
+        &__wrapper{
+            &::before{
+                display: none;
+            }
+        }
+    }
+    .form{
+        &__top{
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(3, 1fr);
+            gap: 17px;
+        }
+        &__input{
+            width: 100%;
+        }
+        #email{
+            grid-column: 1/2;
+        }
+    }
 }
 
 @media (max-width:576px){
@@ -176,18 +310,18 @@
         margin-top: 27px;
         &__list{
             z-index: 2;
-            position: fixed;
-            top: -18px;
-            left: -100%;
-            width: 55%;
-            height: 100vh;
+            position: absolute;
+            top: -45px;
+            left: -110%;
+            width: 100%;
+            height: 30vh;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
             background-color: rgba(0,0,0,.7);
-            padding: 100px 10px;
+            padding: 10px 10px;
             transition: .6s all;
-            gap: 25px;
+            gap: 10px;
             &_active{
                 z-index: 2;
                 left: -24px;
@@ -201,7 +335,7 @@
         z-index: 10;
         display: block;
         align-items: center;
-        position: fixed;
+        position: absolute;
         right: 24px;
         top: 24px;
         transform: translateY(-50%);
@@ -288,5 +422,77 @@
             line-height: 22px;
             padding: 22px 58px;
         }
+    }
+    .laboratory{
+        margin-top: 40px;
+        &__list{
+            grid-template: repeat(3, 1fr) / repeat(1, 270px);
+            margin-top: 32px;
+        }
+        &__item{
+            width: 270px;
+            min-height: 270px;
+            padding-top: 11px;
+            padding-bottom: 22px;
+            &:nth-child(4){
+                padding-top: 16px;
+                .laboratory__item_title{
+                    margin-top: 14px;
+                }
+                .laboratory__item_img{
+                    width: 200px;
+                }
+            }
+            &:nth-child(5){
+                padding-top: 10px;
+                .laboratory__item_title{
+                    margin-top: 10px;
+                }
+                .laboratory__item_img{
+                    width: 183px;
+                }
+            }
+            &:nth-child(6){
+                padding-top: 20px;
+            }
+            &_img{
+                width: 218px;
+            }
+            &_title{
+                margin-top: 30px;
+                margin-left: 22px;
+                font-size: 17px;
+            }
+            &_deskr{
+                margin-top: 10px;
+                margin-left: 22px;
+                font-size: 11px;
+                line-height: 14px;
+            }
+        }
+    }
+    .feedback{
+        margin-top: 40px;
+        &__wrapper{
+            padding: 35px 0;
+        }
+        &__deskr{
+            font-size: 16px;
+            line-height: 21px;
+            width: 100%;
+        }
+    }
+    .form{
+        &__input{
+            padding: 21px 0 21px 21px;
+            font-size: 16px;
+            line-height: 21px;
+        }
+        &__btn{
+            margin-top: 32px;
+        }
+    }
+    .footer{
+        margin: 25px 0;
     }
 }
