--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -10,6 +10,9 @@ nav{
 }
 
 .menu{
+    &_footer{
+        margin-top: 0;
+    }
     margin-top: 24px;
     display: flex;
     justify-content: space-between;
