add before feedback in media

--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -177,7 +177,7 @@
             z-index: 0;
             &::before{
                 z-index: -1;
-                background: url('../../img/feedback/feedback_decor_media.png') center center / cover no-repeat;
+                background: url('../img/feedback/feedback_decor_media.png') center center / cover no-repeat;
                 bottom: 0px;
                 right: -52px;
                 width: 305px;
