delete btn ib section laboratory

--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -478,6 +478,9 @@
                 line-height: 14px;
             }
         }
+        &__shevron{
+            display: none;
+        }
     }
     .feedback{
         margin-top: 40px;
