--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -314,7 +314,7 @@
             top: -45px;
             left: -110%;
             width: 100%;
-            height: 30vh;
+            height: 154px;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
